--- a/templates/Base.html
+++ b/templates/Base.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="u-custom-menu u-nav-container">
                         <ul class="u-nav u-unstyled"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Home</a>
-                        </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="{{url_for('streamPage')}}">Stream</a>
+                        </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="{{url_for('views.streamPage')}}">Stream</a>
                         </li></ul>
                     </div>
                     <div class="u-custom-menu u-nav-container-collapse">
@@ -47,7 +47,7 @@
                                 <div class="u-menu-close"></div>
                                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
                                     <li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Home</a></li>
-                                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="{{url_for('streamPage')}}">Stream</a></li>
+                                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="{{url_for('views.streamPage')}}">Stream</a></li>
                                 </ul>
                             </div>
                         </div>
