--- a/templates/Home.html
+++ b/templates/Home.html
@@ -1,4 +1,4 @@
-{% extends "Base.html" %}
+{% extends "Index.html" %}
 {% block title %} Home {% endblock %}
 {% block body %}
     <section class="u-clearfix u-grey-10 u-section-1" id="sec-cf02">
