--- a/templates/Stream.html
+++ b/templates/Stream.html
@@ -1,19 +1,46 @@
-{% extends "Base.html" %}
+{% extends "Index.html" %}
 {% block title %} Stream {% endblock %}
 {% block body %}
 <body class="u-body u-xl-mode" data-style="blank" data-posts="" data-global-section-properties="{&quot;colorings&quot;:{&quot;light&quot;:[&quot;clean&quot;],&quot;colored&quot;:[&quot;clean&quot;],&quot;dark&quot;:[&quot;dark&quot;]}}" data-source="" data-lang="en" data-page-sections-style="[{&quot;name&quot;:&quot;blank&quot;}]" data-page-coloring-types="{&quot;light&quot;:[&quot;clean&quot;],&quot;colored&quot;:[&quot;clean&quot;],&quot;dark&quot;:[&quot;dark&quot;]}" data-page-category="&quot;Basic&quot;">
   <section class="u-clearfix u-block-d3f5-1" custom-posts-hash="[]" data-style="blank" data-section-properties="{&quot;margin&quot;:&quot;none&quot;,&quot;stretch&quot;:true}" id="sec-b065" data-id="d3f5">
     <div class="u-clearfix u-sheet u-block-d3f5-2" style="display: grid;justify-content: center;grid-template-columns: 100%;padding: 5%;">
       <div class="u-container-style u-group u-palette-5-base u-block-d3f5-3" style="width: 75%;height: fit-content; justify-self:center">
-        <div class="u-container-layout u-block-d3f5-4">
-          <img src="{{ url_for('views.video_feed') }}" style="width:100%"  onerror="this.style.display='none'"/>
+        <div id="viewer" class="u-container-layout u-block-d3f5-4">
+          <video style="width:100%"  onerror="this.style.display='none'" class="remote-view" autoPlay playsInline controls title="From Master"></video>
+<!--          <img src="{{ url_for('views.video_feed') }}" style="width:100%"  onerror="this.style.display='none'"/>-->
         </div>
       </div>
-      <div style="display: flex;justify-content: center;column-gap: 10%;">
-        <a href="{{ url_for('views.play') }}" class="u-border-2 u-border-palette-4-base u-btn u-btn-round u-button-style u-hover-palette-4-base u-none u-radius u-text-black u-text-hover-white u-block-d3f5-5">Start</a>
-        <a href="{{ url_for('views.stop') }}" class="u-border-2 u-border-palette-2-base u-btn u-btn-round u-button-style u-hover-palette-2-base u-none u-radius u-text-black u-text-hover-white u-block-d3f5-6">Stop</a>
+      <form>
+        <div class="form-group">
+          <label for="region">Region Name</label>
+          <input type="text" id="region" placeholder="region name ..." class="form-control valid" autocomplete="off">
+          <datalist id="regionList"></datalist>
+        </div>
+        <div class="form-group">
+          <label for="channelName">Channel Name</label>
+          <input type="text" id="channelName" placeholder="channel name ..." class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="accessKeyId">Access Key</label>
+          <input type="text" id="accessKeyId" placeholder="access key ..." class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="secretAccessKey">Secret Access Key</label>
+          <input type="text" id="secretAccessKey" placeholder="secret access key ..." class="form-control">
+        </div>
+
+      </form>
+      <div class="btn-group mx-auto" role="group">
+        <button style="min-width:100px;width:10vw" id="stream-button" class="btn btn-primary" >Stream</button>
+        <button style="min-width:100px;width:10vw" id="stop-stream-button" class="btn btn-secondary" >Stop</button>
       </div>
+
+<!--      <div style="display: flex;justify-content: center;column-gap: 10%;">-->
+<!--        <a href="{{ url_for('views.play') }}" class="u-border-2 u-border-palette-4-base u-btn u-btn-round u-button-style u-hover-palette-4-base u-none u-radius u-text-black u-text-hover-white u-block-d3f5-5">Start</a>-->
+<!--        <a href="{{ url_for('views.stop') }}" class="u-border-2 u-border-palette-2-base u-btn u-btn-round u-button-style u-hover-palette-2-base u-none u-radius u-text-black u-text-hover-white u-block-d3f5-6">Stop</a>-->
+<!--      </div>-->
     </div>
   </section>
+
 </body>
 {% endblock %}
