fixed error when stop stream and start again. Now can stream repeatedly without refreshing browser

--- a/templates/Stream.html
+++ b/templates/Stream.html
@@ -12,7 +12,7 @@
         <div id="server" class="w-100">
           <h4>AI Processed</h4>
           <video style="width:100%; display:none"  onerror="this.style.display='none'" class="server-view" autoPlay playsInline controls title="From Server"></video>
-          <img id="ai-img" style="width:100%" onerror="this.style.display='none'"/>
+          <img id="ai-img" style="width:100%" />
         </div>
       </div>
         <button style="width:fit-content" id="collapse-button" class="btn btn-dark"  data-toggle="collapse"
