--- a/templates/Stream.html
+++ b/templates/Stream.html
@@ -22,16 +22,16 @@
           <div class="collapse" id="collapseExample">
            <div class="form-group">
               <label for="region">Region Name</label>
-              <input type="text" id="region" placeholder="region name ..."  class="form-control valid" autocomplete="on">
+              <input type="text" id="region" placeholder="region name ..." value="{{ AWS_DEFAULT_REGION }}" class="form-control valid" autocomplete="on">
               <datalist id="regionList"></datalist>
            </div>
               <div class="form-group">
                   <label for="accessKeyId">Access Key</label>
-                  <input type="text" id="accessKeyId" placeholder="access key ..." class="form-control">
+                  <input type="text" id="accessKeyId" placeholder="access key ..." value="{{ AWS_ACCESS_KEY_ID }}" class="form-control">
               </div>
               <div class="form-group">
               <label for="secretAccessKey">Secret Access Key</label>
-              <input type="text" id="secretAccessKey" placeholder="secret access key ..." class="form-control">
+              <input type="text" id="secretAccessKey" placeholder="secret access key ..." value="{{ AWS_SECRET_ACCESS_KEY }}" class="form-control">
               </div>
           </div>
         <div class="form-group">
@@ -51,9 +51,6 @@
 
     </div>
   </section>
-<script>
-    var status ="unknown";
-</script>
 
 </body>
 {% endblock %}
